Modified in package.json for auto triggering the test

--- a/package.json
+++ b/package.json
@@ -4,13 +4,8 @@
   "description": "Practice project for Angular with Cucumber",
   "main": "index.js",
   "scripts": {
-    "test": "protractor ./JSFiles/config.js",
-    "pretest": "tsc",
-    "Protractor":"./node_modules/protractor/built/cli.js",
-    "webdriver-manager":"./node_modules/protractor/node_modules/webdriver-manager update",
-    "webdriver-start":"./node_modules/protractor/node_modules/webdriver-manager start"
-    
-
+    "test": "protractor JSFiles/config.js",
+    "pretest": "tsc"
   },
   "author": "Sankar Ginjupalli",
   "license": "ISC",
